--- a/2023/pyproject.toml
+++ b/2023/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "advent-of-code"
+name = "aoc-2023"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
